--- a/resources/common/themes/mimi.css
+++ b/resources/common/themes/mimi.css
@@ -730,6 +730,7 @@ body.tundra.mimi {
     padding-left:30px;
     border-radius:6px;
     margin-left:8px;
+    padding-top:3px;
 }
 .touchDevice .menutree .opendir{
     background: none;
