--- a/gnrjs/gnr_d11/css/gnrbase.css
+++ b/gnrjs/gnr_d11/css/gnrbase.css
@@ -2870,6 +2870,7 @@ div.cellContent{
     transition-duration:0;
     line-height:15px;
     min-height: 15px;
+    border:1px solid transparent;
 }
 
 .cell_editable .cellContent:hover{
