--- a/gnrjs/gnr_d11/css/gnrbase.css
+++ b/gnrjs/gnr_d11/css/gnrbase.css
@@ -2478,7 +2478,14 @@ div.dojoxDock {
     border-radius: 4px;
     border-left: 1px solid #efefef;
     box-shadow: 2px 2px 3px #666;
+    min-width: 360px;
 }
+.quickthermo_box.thermo_message .form_waiting{
+    width: 100%;
+    border-width: 0;
+    box-shadow: none;
+}
+
 .quickthermo_title{
     font-variant: normal;
     font-size: 14px;
